!strict fixes #4900. Added test in bug to grid tests. Also corrected problem with autoHeight introduced by having grid hidden in an unsized container. Fixed: grid hides in an unsized container on IE.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@12794 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/_grid/Grid.css
+++ b/grid/_grid/Grid.css
@@ -4,6 +4,7 @@
 	font-family: Geneva, Arial, Helvetica, sans-serif;
 	-moz-outline-style: none;
 	outline: none;
+	height: 0;
 }
 
 .dojoxGrid table {
