--- a/grid/_grid/tundraGrid.css
+++ b/grid/_grid/tundraGrid.css
@@ -4,6 +4,7 @@
 	font-size: 0.85em; /* inherit font-family from dojo.css */
 	-moz-outline-style: none;
 	outline: none;
+	height: 0;
 }
 
 .tundra .dojoxGrid table {
